# search-latency-bench

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml
sample_queries/: msmarco.jsonl
search_latency_bench/: __init__.py  benchmark.py  cli.py  querygen.py  types.py
search_latency_bench/engines/: __init__.py  brave.py  engine.py  exa.py  parallel.py  perplexity.py
